[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/PzfOYCnb.png" type="Texture" id=2]
[ext_resource path="res://Sprites/platformer_sprites/light/light2.png" type="Texture" id=3]
[ext_resource path="res://Scenes/ScreenShake.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Laser2.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/Jump.wav" type="AudioStream" id=6]

[sub_resource type="Animation" id=1]
resource_name = "recule"
length = 0.06
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.04 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 7 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13, 25 )

[sub_resource type="Animation" id=3]
resource_name = "hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.180392, 0.180392, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 4 ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 15.3308, 27.2 )

[sub_resource type="AudioStreamRandomPitch" id=9]
audio_stream = ExtResource( 5 )

[sub_resource type="AudioStreamRandomPitch" id=10]
audio_stream = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 2.51924 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 7.63629, 28.1531 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
light_mask = 2
position = Vector2( 448, 224 )
scale = Vector2( 1.25, 1.25 )
z_index = 2
collision_layer = 2
collision_mask = 389
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 10

[node name="arm" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( -4.99997, 9 )
texture = ExtResource( 2 )
hframes = 10
frame = 7

[node name="muzzle" type="Position2D" parent="arm"]
position = Vector2( 28.8677, -0.737846 )

[node name="arm_anim" type="AnimationPlayer" parent="arm"]
anims/recule = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="arm"]
texture = ExtResource( 3 )
offset = Vector2( 405, -1 )
color = Color( 1, 0.906647, 0.480469, 1 )
energy = 1.5
shadow_enabled = true

[node name="shape" type="CollisionShape2D" parent="."]
position = Vector2( 0.6, 1 )
shape = SubResource( 2 )

[node name="camera" type="Camera2D" parent="."]
current = true

[node name="ScreenShake" parent="camera" instance=ExtResource( 4 )]

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )
anims/jump_down = SubResource( 5 )
anims/jump_up = SubResource( 6 )
anims/walk = SubResource( 7 )

[node name="hitbox" type="Area2D" parent="."]

[node name="shape" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.308441, 1.74777 )
shape = SubResource( 8 )

[node name="sounds" type="Node2D" parent="."]
editor/display_folded = true

[node name="laser" type="AudioStreamPlayer" parent="sounds"]
stream = SubResource( 9 )
volume_db = -40.0

[node name="jump" type="AudioStreamPlayer2D" parent="sounds"]
stream = SubResource( 10 )
volume_db = -30.0

[node name="pass_verif" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="pass_verif"]
visible = false
position = Vector2( -0.326263, 25.6107 )
shape = SubResource( 11 )

[node name="ladder_verif" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder_verif"]
position = Vector2( -1.08978, 2.45207 )
shape = SubResource( 12 )

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_time_timeout"]
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_exited" from="pass_verif" to="." method="_on_pass_verif_body_exited"]
[connection signal="area_shape_entered" from="ladder_verif" to="." method="_on_ladder_verif_area_shape_entered"]
[connection signal="area_shape_exited" from="ladder_verif" to="." method="_on_ladder_verif_area_shape_exited"]
